Fixes the datepicker underlay on smaller screens

--- a/src/components/ic-datepicker/ic-datepicker.component.scss
+++ b/src/components/ic-datepicker/ic-datepicker.component.scss
@@ -4,14 +4,21 @@ $mobileBreakpoint: 480px;
   position: relative;
 }
 
+.ic-datepicker-underlay {
+  display: none;
+}
+
 @media (max-width: $mobileBreakpoint) {
-  .ic-datepicker-underlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vh;
-    background: rgba(#000, 0.3);
+  .ic-open {
+    .ic-datepicker-underlay {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vh;
+      background: rgba(#000, 0.3);
+    }
   }
 }
 
